# slurm_longrun

./: README.md  chart.ipynb  playground.ipynb  pyproject.toml
.github/workflows/: pypi-publish.yml
archive/: utils.py
example/: my_script.py  run_job.sbatch
example/assignment2_example/: run_job.sbatch
example/assignment2_example/assignment_2/: dataset.py  test.py  train.py  utils.py
logs/: run_example_assignment2.err  run_example_assignment2_standard_sbatch.err  run_example_assignment2_standard_sbatch.out
report/: REPORT.md
slurm_longrun/: common.py  logger.py  main.py  runner.py  utils.py
