[tool.poetry]
name = "slurm-longrun"
version = "0.1.0"
description = ""
authors = ["Alex Thillen <alexthillen852@gmail.com>"]
readme = "README.md"
packages = [{include = "slurm_longrun"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
